--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.4",
     "@tldraw/tldraw": "^3.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.21.0",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.483.0",
     "moment": "^2.30.1",
     "next": "^15.2.4",
